objects/Mobile_Card__c.object
<CustomObject>
    <fields>
        <fullName>Mobile_App_Support_Case_Time__c</fullName>
        <label>App Support - Mobile Case Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Requirements__c</fullName>
        <label>New Requirements</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Events_Used__c</fullName>
        <label>Number of Events Used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Events__c</fullName>
        <label>Number of Events</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_Time_Deliery_Met__c</fullName>
        <formula>IF(ISBLANK(a_Released_Date__c), "", IF( a_Released_Date__c - o_Released_Date__c &gt; 0, "No", "Yes"))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>On-Time Delivery Met</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Onboarding__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Denotes the app cards that are of new customers being onboarded (1st app)</inlineHelpText>
        <label>Onboarding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Onsite_Notes__c</fullName>
        <label>Onsite Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Onsite_Request_Ends_Date__c</fullName>
        <label>Onsite Request Ends Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Onsite_Request_Start_Date__c</fullName>
        <label>Onsite Request Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Onsite_Requested_Date__c</fullName>
        <label>Onsite Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OpportunityLineItemID__c</fullName>
        <inlineHelpText>Stores the associated Opportunity Product ID.</inlineHelpText>
        <label>OpportunityLineItemID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Cards_CC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Overall_CSAT_Score__c</fullName>
        <formula>(Ease_of_App_build_process__c*0.10 +  Understanding_your_needs__c *0.25 +  Adherence_to_Project_Plan_and_Timelines__c *0.25 +  Quality_of_deliverable_s__c *0.20+ Your_Relationship_Representative__c *0.20)/5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall CSAT Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Oversold_Comment__c</fullName>
        <label>Post Purchase Concern Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Oversold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Post Purchase Concern</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Detail__c</fullName>
        <formula>Owner:User.FirstName &amp;" "&amp;  Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PSP</label>
        <referenceTo>Professional_Services_Project__c</referenceTo>
        <relationshipLabel>Mobile Apps</relationshipLabel>
        <relationshipName>Mobile_Apps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Personalized_Schedules__c</fullName>
        <label>Personalized Schedules?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Platforms__c</fullName>
        <label>Platforms</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>iPhone</fullName>
                </value>
                <value>
                    <fullName>Android</fullName>
                </value>
                <value>
                    <fullName>iPad</fullName>
                </value>
                <value>
                    <fullName>Blackberry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Post_Purchase_Reason__c</fullName>
        <label>Post Purchase Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Oversold__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Service Expectations</fullName>
                </value>
                <value>
                    <fullName>Timelines</fullName>
                </value>
                <value>
                    <fullName>Contracting Issue</fullName>
                </value>
                <value>
                    <fullName>Not a Fit/Workaround Reliant</fullName>
                </value>
                <value>
                    <fullName>Presold Feature</fullName>
                </value>
                <value>
                    <fullName>No TSC/Demo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pre_Event_Test_Cases_Completed__c</fullName>
        <label>Pre-Event Test Cases Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_Event_Test_Date__c</fullName>
        <label>Pre-Event Test Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pre_Event_Test_Score__c</fullName>
        <label>Pre-Event Test Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Preloaded_Attendees__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Preloaded Attendees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Cards_CC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_s_Email__c</fullName>
        <formula>Primary_Contact__r.Email</formula>
        <label>Primary Contact's Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Version__c</fullName>
        <label>Product Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bronze</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Status_Indicator__c</fullName>
        <formula>IMAGE( 
CASE( Project_Status__c, 
"Red", "/img/samples/flag_red.gif", 
"Yellow","/img/samples/flag_yellow.gif", 
"Green","/img/samples/flag_green.gif", 
""), 
"Project Status Flag")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Status Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Status_Notes__c</fullName>
        <label>Project Status Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <label>Project Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QA_Date__c</fullName>
        <label>QA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QA_Score__c</fullName>
        <label>QA Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QA_Test_Cases_Completed__c</fullName>
        <label>QA Test Cases Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quality_Reviewed_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quality Reviewed by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Mobile_Apps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quality_Submission_Followed__c</fullName>
        <label>Quality Submission Followed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quality_of_deliverable_s__c</fullName>
        <label>Quality of deliverable(s)</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RM_Signoff__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RM Signoff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason for Re-onboarding</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Client</fullName>
                </value>
                <value>
                    <fullName>New POC</fullName>
                </value>
                <value>
                    <fullName>Multiple Apps</fullName>
                </value>
                <value>
                    <fullName>Client's Request</fullName>
                </value>
                <value>
                    <fullName>Client's Purchase</fullName>
                </value>
                <value>
                    <fullName>Manager Exception</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Multiple POC/Division</fullName>
                </value>
                <value>
                    <fullName>Return App Build</fullName>
                </value>
                <value>
                    <fullName>ARA/Escalation</fullName>
                </value>
                <value>
                    <fullName>Lighter Onboarding</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Timeline_Missed__c</fullName>
        <label>Reason for Timeline Missed ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>PC</fullName>
                </value>
                <value>
                    <fullName>Apple/GooglePlay</fullName>
                </value>
                <value>
                    <fullName>Builder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Release_Owner__c</fullName>
        <label>Release Owner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cvent</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Undecided</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Release_Type__c</fullName>
        <label>Release Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AttendeeHub</fullName>
                </value>
                <value>
                    <fullName>Self-Publishing</fullName>
                </value>
                <value>
                    <fullName>Undecided</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Repeat_Onboarding__c</fullName>
        <label>Repeat Onboarding</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Disposition__c</fullName>
        <label>Request Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Need More Info</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Client Decision</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Expiration_Date__c</fullName>
        <label>Request Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>App Build Plus</fullName>
                </value>
                <value>
                    <fullName>Rush Request</fullName>
                </value>
                <value>
                    <fullName>Data Loading Service</fullName>
                </value>
                <value>
                    <fullName>App Build Platinum</fullName>
                </value>
                <value>
                    <fullName>Rush Request + App Build Plus</fullName>
                </value>
                <value>
                    <fullName>Rush Request + Data Loading Service</fullName>
                </value>
                <value>
                    <fullName>Rush Request + App Build Platinum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_Date__c</fullName>
        <description>Date Rush Request Completed</description>
        <label>Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requirement_Change_Requests__c</fullName>
        <label>Requirement Change Requests</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Requirements_Tracker_Location_URL__c</fullName>
        <label>Requirements &amp; Tracker Location URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Reviewer_Submission__c</fullName>
        <label>Reviewer Submission</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Aaron Kurup</fullName>
                </value>
                <value>
                    <fullName>Akshay Saluja</fullName>
                </value>
                <value>
                    <fullName>Avril Arora</fullName>
                </value>
                <value>
                    <fullName>Daphne Iyer</fullName>
                </value>
                <value>
                    <fullName>Deeksha Sharma</fullName>
                </value>
                <value>
                    <fullName>Diva Singh</fullName>
                </value>
                <value>
                    <fullName>Eshita Gupta</fullName>
                </value>
                <value>
                    <fullName>Isaac Singh</fullName>
                </value>
                <value>
                    <fullName>Naveen Bhalla</fullName>
                </value>
                <value>
                    <fullName>Neha Verma</fullName>
                </value>
                <value>
                    <fullName>Nishi Punetha</fullName>
                </value>
                <value>
                    <fullName>Paljeet Singh</fullName>
                </value>
                <value>
                    <fullName>Russell Singh</fullName>
                </value>
                <value>
                    <fullName>Tanya Tewari</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reviewer_Tasks__c</fullName>
        <label>Reviewer Tasks</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Aaron Kurup</fullName>
                </value>
                <value>
                    <fullName>Akshay Saluja</fullName>
                </value>
                <value>
                    <fullName>Avril Arora</fullName>
                </value>
                <value>
                    <fullName>Daphne Iyer</fullName>
                </value>
                <value>
                    <fullName>Deeksha Sharma</fullName>
                </value>
                <value>
                    <fullName>Diva Singh</fullName>
                </value>
                <value>
                    <fullName>Eshita Gupta</fullName>
                </value>
                <value>
                    <fullName>Isaac Singh</fullName>
                </value>
                <value>
                    <fullName>Naveen Bhalla</fullName>
                </value>
                <value>
                    <fullName>Neha Verma</fullName>
                </value>
                <value>
                    <fullName>Nishi Punetha</fullName>
                </value>
                <value>
                    <fullName>Paljeet Singh</fullName>
                </value>
                <value>
                    <fullName>Russell Singh</fullName>
                </value>
                <value>
                    <fullName>Tanya Tewari</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reviewer_UAT__c</fullName>
        <label>Reviewer (UAT)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Aaron Kurup</fullName>
                </value>
                <value>
                    <fullName>Akshay Saluja</fullName>
                </value>
                <value>
                    <fullName>Avril Arora</fullName>
                </value>
                <value>
                    <fullName>Daphne Iyer</fullName>
                </value>
                <value>
                    <fullName>Deeksha Sharma</fullName>
                </value>
                <value>
                    <fullName>Diva Singh</fullName>
                </value>
                <value>
                    <fullName>Eshita Gupta</fullName>
                </value>
                <value>
                    <fullName>Isaac Singh</fullName>
                </value>
                <value>
                    <fullName>Naveen Bhalla</fullName>
                </value>
                <value>
                    <fullName>Neha Verma</fullName>
                </value>
                <value>
                    <fullName>Nishi Punetha</fullName>
                </value>
                <value>
                    <fullName>Paljeet Singh</fullName>
                </value>
                <value>
                    <fullName>Russell Singh</fullName>
                </value>
                <value>
                    <fullName>Tanya Tewari</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SS_Mins__c</fullName>
        <label>SS (Mins)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secondary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Mobile Apps (Secondary Contact)</relationshipLabel>
        <relationshipName>Mobile_Apps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Secondary_Contact_s_Email__c</fullName>
        <formula>Secondary_Contact__r.Email</formula>
        <label>Secondary Contact's Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Self_Submission__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Self-Submission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Tier__c</fullName>
        <formula>Contract_Account_New__r.Service_Tier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sessions__c</fullName>
        <inlineHelpText>Number of sessions</inlineHelpText>
        <label>Sessions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Short_Name__c</fullName>
        <label>Short Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsors__c</fullName>
        <inlineHelpText>Number of sponsors</inlineHelpText>
        <label>Sponsors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage_L2__c</fullName>
        <label>Stage L2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Stage__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mistake/Duplicate</fullName>
                </value>
                <value>
                    <fullName>Cancelled Event</fullName>
                </value>
                <value>
                    <fullName>Cancelled Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Assignment</fullName>
                </value>
                <value>
                    <fullName>Pending Kick-Off</fullName>
                </value>
                <value>
                    <fullName>Pending Project Plan</fullName>
                </value>
                <value>
                    <fullName>Graphics &amp; Data</fullName>
                </value>
                <value>
                    <fullName>Framework Building</fullName>
                </value>
                <value>
                    <fullName>Preview &amp; Iterate</fullName>
                </value>
                <value>
                    <fullName>Pending App Store</fullName>
                </value>
                <value>
                    <fullName>Approved &amp; Released</fullName>
                </value>
                <value>
                    <fullName>Event in Progress</fullName>
                </value>
                <value>
                    <fullName>Pending Closeout</fullName>
                </value>
                <value>
                    <fullName>Closed Out</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Application Development</fullName>
                </value>
                <value>
                    <fullName>Client review &amp; Iterate</fullName>
                </value>
                <value>
                    <fullName>Contract Received</fullName>
                </value>
                <value>
                    <fullName>Design &amp; Scope Definition</fullName>
                </value>
                <value>
                    <fullName>Kick-Off</fullName>
                </value>
                <value>
                    <fullName>Post-Event Support</fullName>
                </value>
                <value>
                    <fullName>Rush Request Received</fullName>
                </value>
                <value>
                    <fullName>App Launched Multi-Event</fullName>
                </value>
                <value>
                    <fullName>Did Not Contract</fullName>
                </value>
                <value>
                    <fullName>Pending Start</fullName>
                </value>
                <value>
                    <fullName>Ongoing Support</fullName>
                </value>
                <value>
                    <fullName>Clean-Up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <formula>Opportunity__r.ContractReceived__c</formula>
        <inlineHelpText>Start Date is the Contract Received Date</inlineHelpText>
        <label>Contract Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Submission_Link__c</fullName>
        <label>Submission Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Submission_Quality_Comments__c</fullName>
        <label>Submission Quality Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Submission_Score__c</fullName>
        <label>Submission Score (%)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Survey_Invitation_Sent__c</fullName>
        <label>Survey Invitation Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Survey_Recieved__c</fullName>
        <label>Survey Recieved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Survey_Sent_By__c</fullName>
        <label>Survey Sent By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TTS_Actual__c</fullName>
        <formula>Total_Time_Spent_Task_Hrs__c + Total_Time_Spent_Event_Hrs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TTS Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TTS_Anticipated__c</fullName>
        <label>TTS Anticipated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TTS_Mobile_Events__c</fullName>
        <description>Sum of all the Mobile Events activities</description>
        <label>TTS Mobile Events</label>
        <summarizedField>Mobile_Event__c.TTS_Mobile_Event__c</summarizedField>
        <summaryForeignKey>Mobile_Event__c.Mobile_App__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Task_Review_Mins__c</fullName>
        <label>Task Review (Mins)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Task_Review_Score__c</fullName>
        <label>Task Review Score (%)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Template_Version__c</fullName>
        <description>This field is created as part of QuickMobile Migration</description>
        <label>Template Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thread_Id__c</fullName>
        <formula>"ref:"&amp;LEFT( $Organization.Id , 4 )&amp; 
IF(BEGINS(RIGHT($Organization.Id,11), '00000000'), 
RIGHT($Organization.Id,3), 
IF(BEGINS(RIGHT($Organization.Id,11), '0000000'), 
RIGHT($Organization.Id,4), 
IF(BEGINS(RIGHT($Organization.Id,11), '000000'), 
RIGHT($Organization.Id,5), 
IF(BEGINS(RIGHT($Organization.Id,11), '00000'), 
RIGHT($Organization.Id,6), 
IF(BEGINS(RIGHT($Organization.Id,11), '0000'), 
RIGHT($Organization.Id,7), 
IF(BEGINS(RIGHT($Organization.Id,11), '000'), 
RIGHT($Organization.Id,8), 
RIGHT($Organization.Id,11) 
) 
) 
) 
) 
) 
) 
&amp;"."&amp;LEFT( Id , 4 )&amp; 
IF(BEGINS(RIGHT(Id,11), '00000000'), RIGHT(Id,3), 
IF(BEGINS(RIGHT(Id,11), '0000000'), RIGHT(Id,4), 
IF(BEGINS(RIGHT(Id,11), '000000'), RIGHT(Id,5), 
IF(BEGINS(RIGHT(Id,11), '00000'), RIGHT(Id,6), 
IF(BEGINS(RIGHT(Id,11), '0000'), RIGHT(Id,7), 
IF(BEGINS(RIGHT(Id,11), '000'), RIGHT(Id,8), 
RIGHT(Id,11) 
) 
) 
) 
) 
) 
) 
&amp;":ref"</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Thread Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Spend_On_Related_Cases__c</fullName>
        <description>Time Spend On Related Cases - Roll up Timing Object Records on related cases</description>
        <label>Time Spend On Related Cases</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Spent_On_Mobile_Card__c</fullName>
        <description>Total Time Spend On Mobile Card - Roll Up Timings Object Records</description>
        <label>Time Spent On Mobile Card</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>